# programming2

./: .gitignore  README.md
lab11/: aloc.h  lab5.cpp  tests.h
lab12/: CMakeLists.txt  lab12.cpp  polynom.h  tests.cpp
lab2/: Source.cpp
lab3/: Circular_buffer.h  algo.h  lab9.cpp
lab4/: cube.h  cube.txt  cube_output.txt  lab10.cpp  solve.txt
lab7/: RClosurePolyline.cpp  RGeometry.h  RPoint.cpp  RPolygon.cpp  RPolyline.cpp  RPolynom.cpp  RPolynom.h  RRegularPolygon.cpp  RTrapezoid.cpp  RTriangle.cpp  lab7a.cpp
